<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- Content Area -->
    <LinearLayout
        android:id="@+id/title_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@id/title_area">
        <ImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_height="@dimen/img_height"
            android:layout_marginBottom="@dimen/general_margin"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/relativeButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/general_margin"
            app:srcCompat="@android:drawable/ic_media_next"
            android:backgroundTint="@color/colorPrimary"
            tools:ignore="NotSibling" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@id/title_image_layout"
        app:layout_constraintLeft_toLeftOf="@id/title_area"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_margin">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
                <Button
                    android:id="@+id/button_aufgaben"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_aufgaben"
                    android:textSize="@dimen/button_size"
                    android:drawableLeft="@drawable/ic_menu_webview"
                    />
                <Button
                    android:id="@+id/button_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gallery"
                    android:textSize="@dimen/button_size"
                    android:drawableLeft="@drawable/ic_menu_gallery"
                    />
                <Button
                    android:id="@+id/button_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_map"
                    android:textSize="@dimen/button_size"
                    android:drawableLeft="@drawable/ic_menu_map"
                    />
                <Button
                    android:id="@+id/button_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_tip"
                    android:textSize="@dimen/button_size"
                    android:drawableLeft="@drawable/ic_tip"
                    />
                <Button
                    android:id="@+id/button_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_alert"
                    android:textSize="@dimen/button_size"
                    android:drawableLeft="@drawable/ic_alert"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/button_news_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_news_1"
                        android:background="@drawable/button_selector"
                        android:state_activated="false"/>
                    <Button
                        android:id="@+id/button_news_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_news_2"
                        android:background="@drawable/button_selector"
                        android:state_activated="false"/>
                    <Button
                        android:id="@+id/button_news_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_news_3"
                        android:background="@drawable/button_selector"
                        android:state_activated="false"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/text_frame">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subtitle_size"
                        android:text="@string/subtitle_1"
                        android:textColor="@color/colorSubtitle"
                        android:layout_marginTop="@dimen/general_margin_half"
                        android:layout_marginLeft="@dimen/general_margin_half"
                        android:layout_marginBottom="@dimen/general_margin_half"/>
                    <TextView
                        android:id="@+id/news_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_margin="@dimen/general_margin_half"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>