<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title Area -->
    <LinearLayout
        android:id="@+id/title_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:textColor="@color/colorTitle"
            android:text="@string/title_locations" />
    </LinearLayout>

    <!-- Content Area -->
    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@id/title_area"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/no_location_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_added_location"
                android:paddingTop="@dimen/general_padding"
                android:paddingBottom="@dimen/general_padding"
                android:paddingRight="@dimen/general_padding"/>
            <TextView
                android:id="@+id/text_no_list_items"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"
                android:text="@string/dialog_no_list_items"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_added_location"
                android:paddingTop="@dimen/general_padding"
                android:paddingBottom="@dimen/general_padding"
                android:paddingLeft="@dimen/general_padding"/>
        </LinearLayout>

        <ListView
            android:id="@+id/list_view_location"
            android:layout_width="match_parent"
            android:layout_height="400dp">
        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_view_location"
            android:text="@string/hint_delete_location"
            android:textAlignment="center"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>